...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass">

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00FFFFFF"
                    android:text="Ingresar"
                    android:textColor="#330E0E"
                    android:textSize="20sp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.937"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/box_color"
                    android:textColorHint="#E6D7C8"
                    android:textCursorDrawable="@drawable/cursor_beige"
...
